--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "draft-js": "^0.11.7",
     "next": "15.1.6",
-    "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
